Acrescentei botões para dinâmizar e deixar a experiência do usuário mais atrativa e fácil, além de acrescentar contador de tarefas no geral